--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
 </head>
 <body>
 	<table>
-		<tr>Nama :</tr>
-			<td>Mochamad Abdiel Abhista</td>
-		<tr>NIM :</tr>
-			<td>6701190072</td>
-		<tr>Tempat Tanggal Lahir</tr>
-			<td>Bandung, 9 Januari 2000</td>
-		<tr>IPK Terakhir :</tr>
-			<td>3,12</td>
+		<tr>Nama :
+			<td>Nama : Mochamad Abdiel Abhista</td>
+		</tr>
+		<tr>
+			<td>NIM : 6701190072</td>
+		</tr>
+		<tr>
+			<td>Tempat Tanggal Lahir : Bandung, 9 Januari 2000</td>
+		</tr>	
+		<tr>
+			<td>IPK Terakhir : 3,12</td>
+		</tr>
+		<tr>
+			<td>Nama Dosen : Muthia Qaa'naa</td>
+		</tr>
+			
 	</table>
 </body>
 </html>
